--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="main.css">
     <title>April Cools' Club</title>
+
+    <meta property="og:title" content="April Cools' Club" />
+    <meta property="og:locale" content="en" />
+    <meta property="og:image" content="https://www.aprilcools.club/aprilcoolsclub.png">
+    <meta property="og:image:secure_url" content="https://www.aprilcools.club/aprilcoolsclub.png">
+    <meta property="og:url" content="https://www.aprilcools.club/" />
+    <meta property="og:site_name" content="April Cools' Club" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image:src" content="https://www.aprilcools.club/aprilcoolsclub.png">
 </head>
 
 <body>
