--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta property="og:url" content="https://www.aprilcools.club/" />
     <meta property="og:site_name" content="April Cools' Club" />
 
+    <link rel="alternate" type="application/atom+xml" href="https://www.aprilcools.club/feed.xml">
+
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image:src" content="https://www.aprilcools.club/aprilcoolsclub.png">
 </head>
