--- a/index.html
+++ b/index.html
@@ -100,10 +100,11 @@
                 <dt>How can I participate?</dt>
 
                 <dd>Do you have an idea that fits the spirit of the April Cools' Day?
-                    Excellent. Get creating, and once you're done, send a pull request to <a
-                        href="https://github.com/april-cools/april-cools.github.io/blob/main/_data/projects.yml">the
-                        repository of this website</a>.
-                    Alternatively, submit through <a href="https://forms.gle/V4EL5mi4wMsHWWDZ7">Google Forms</a>.
+                    Excellent. Get creating, and once you're done, send a pull request to
+                    <a href="https://github.com/april-cools/april-cools.github.io/blob/main/_data/projects.yml">the
+                    repository of this website</a>.
+                    Alternatively, poke <a href="https://mastodon.hupel.info/@lars">Lars on Mastodon</a>
+                    or <a href="https://bsky.app/profile/hillelwayne.com">Hillel on Bluesky</a>.
                 </dd>
 
                 <dt>Where is your privacy policy?</dt>
